--- a/.bowerrc
+++ b/.bowerrc
@@ -1,5 +1,5 @@
 {
-  "directory": "./bower_components/",
+  "directory": "./public/bower_components/",
   "timeout": 120000,
   "registry": {
     "search": [
